--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,11 @@ plugins {
     id 'org.jetbrains.kotlin.android'
 }
 
+def apikeyPropertiesFile = rootProject.file("apikey.properties")
+def apikeyProperties = new Properties()
+apikeyProperties.load(new FileInputStream(apikeyPropertiesFile))
+
+
 android {
     compileSdk 32
 
@@ -14,16 +19,12 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        buildConfigField("String", "API_KEY", apikeyProperties['API_KEY'])
     }
 
     buildTypes {
-        debug {
-            //buildConfigField "String", "API_KEY", "dUVV2nQ9Yx4MEyY7N6z5782sY1u5GAj2"
-        }
-
         release {
-            //buildConfigField "String", "API_KEY", "dUVV2nQ9Yx4MEyY7N6z5782sY1u5GAj2"
-
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
